--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GameOfLife</title>
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js" type="module"></script>
   </head>
   <body></body>
 </html>
