Adding interactions for DOM

--- a/index.html
+++ b/index.html
@@ -10,36 +10,36 @@
     <script src="./js/app.js" type="module"></script>
   </head>
   <body>
-    <div class="big-square">
-      <div>
+    <div class="big-square" id="big-square">
+      <div class="square" id="square">
         <div></div>
         <div></div>
         <div></div>
         <div></div>
         <div></div>
       </div>
-      <div>
+      <div class="square" id="square">
         <div></div>
         <div></div>
         <div></div>
         <div></div>
         <div></div>
       </div>
-      <div>
+      <div class="square" id="square">
         <div></div>
         <div></div>
         <div></div>
         <div></div>
         <div></div>
       </div>
-      <div>
+      <div class="square" id="square">
         <div></div>
         <div></div>
         <div></div>
         <div></div>
         <div></div>
       </div>
-      <div>
+      <div class="square" id="square">
         <div></div>
         <div></div>
         <div></div>
