Add functionality for buttons

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title>GameOfLife</title>
     <link rel="shortcut icon" href="ico/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="./js/app.js" type="module"></script>
   </head>
   <body>
     <h1>GAME OF LIFE</h1>
-    <section>
-      <button>Play</button>
-      <button>Stop</button>
+    <section class="buttons">
+      <button id="play">Play</button>
+      <button id="stop">Stop</button>
     </section>
     <div class="big-square" id="big-square">
       <div class="square">
@@ -977,5 +976,6 @@
         <div></div>
       </div>
     </div>
+    <script src="./js/app.js" type="module"></script>
   </body>
 </html>
